# mothx

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  check_sandbox.go  go.mod  go.sum  install.bat  install.ps1  install.sh  todo.md
.github/workflows/: ghcr-publish.yml  github-npm-publish.yml  release.yml
.qwen/: settings.json  settings.json.orig
agent/: agent_test.go  builder.go  external_tool.go  image_coordinates.go  image_coordinates_test.go  provider.go  provider_bridge.go  types.go
bootstrap/: bootstrap.go
cmd/mothx/: console_darwin.go  console_unix.go  flag_errors.go  main.go  main_a2a.go  main_cron.go  main_doctor.go  main_hermes.go  main_serve.go  main_serve_test.go  main_speedtest.go  main_speedtest_test.go  main_stats.go  main_stats_test.go  main_test.go  main_util.go  print_mode_test.go
cmd/vibecoding/: console_unix.go  console_windows.go  flag_errors.go  main.go  main_a2a.go  main_auth.go  main_doctor.go  main_hermes.go  main_stats.go  main_stats_test.go  main_test.go  main_util.go  print_mode_test.go
docs/: CNAME  README.md  RELEASE-v0.0.3.md  RELEASE-v0.0.4.md  RELEASE-v0.0.5.md  cli-reference.md  code-review-report.md  development.md  hermes-mode-proposal.md  index.html  install.bat  install.sh  models.md  provider-model-list.md  review.md  security.md  serve.py  skills.md
docs/assets/: mothx.xcf
docs/en/: README.md  a2a.md  acp.md  architecture.md  changelog.md  cli-reference.md  configuration.md  development.md  faq.md  features-overview.md  gateway.md  getting-started.md  hermes.md  provider-guide.md  quick-start-tutorial.md  scenarios.md  sdk.md  security.md  serve.md  sessions.md  skillhub.md  skills.md  tools.md  use-cases.md  workflow.md
docs/proposal/: auth-command-proposal.md  auth-settings-v2-proposal.md  auth-settings-v2-review.md  cache-optimization.md  ccstatusline-native-support.md  codex-goal-mode.md  context-compaction-refactor.md  delegate-mode-proposal.md  dynamic-workflows-elisp-proposal.md  enable-supervisor-mode.md  gateway-proposal.md  hermes-mode-proposal.md  mode-boundary-proposal.md  multimodal-image-optimization.md  non-developer-desktop-installer-proposal.md  sandbox-architecture-proposal.md  serve-workbench-roadmap.md  skillhub-api-research.md  skillhub-market-protocol.md  skillhub-marketplace-plan.md  tui-rendering-refactor.md  unified-serve-proposal.md  webui-multi-session-streaming-proposal.md  webui-session-stop-and-approval-lifecycle.md  webui-tui-sync-proposal.md  windows-sandbox-proposal.md
docs/scripts/: generate-openrouter-models.py
docs/zh/: README.md  a2a.md  acp.md  architecture.md  changelog.md  cli-reference.md  configuration.md  development.md  faq.md  features-overview.md  gateway.md  getting-started.md  hermes.md  provider-guide.md  quick-start-tutorial.md  scenarios.md  sdk.md  security.md  serve.md  sessions.md  skillhub.md  skills.md  tools.md  use-cases.md  workflow.md
example/custom_provider/: README.md  README_zh.md  main.go
example/simple_agent/: README.md  README_zh.md  main.go
internal/a2a/: a2a_test.go  config.go  executor.go  handler.go  master.go  server.go  task.go
internal/acp/: acp.go  acp_mcp_test.go  mcp.go  mcp_http_integration_test.go  (+2 more)
npm/: .npmignore  README.md  index.js  package.json  postinstall.js
pypi/: README.md  pyproject.toml
pypi/src/mothx_installer/: cli.py
pypi/src/vibecoding_installer/: __init__.py  cli.py
scripts/: build-deb.sh  build-github-npm-packages.sh  build-loongarch.sh  build-npm-packages.sh  build-npm.sh  build-pypi-packages.sh  build-self-extract-installers.sh  build-tarball.sh  build-zip.sh  extract-vendored-tool.sh  npm-publish-if-needed.js  sync-npm-version.sh  sync-pypi-version.sh  verify-npm-platform-packages.js
ui/: embed.go  index.html  package-lock.json  package.json  vite.config.js
(+427 files in other folders)
